--- a/admin.html
+++ b/admin.html
@@ -32,13 +32,25 @@
   <!-- Main content -->
   <div class="main-content">
 
-    <!-- Top bar -->
+    <!-- Top bar/notification -->
     <div class="top-bar">
       <h1>Dashboard</h1>
       <div class="top-right">
-        <span class="mail-icon" title="Check Mail">
+        <span class="mail-icon" title="Loan Notifications" style="position: relative; cursor: pointer;">
           <i class="fas fa-envelope"></i>
+          <span id="notificationBadge" style="
+           position: absolute;
+           top: -5px;
+           right: -5px;
+           background: red;
+           color: white;
+           font-size: 12px;
+           padding: 2px 6px;
+           border-radius: 50%;
+           display: none;">
+         </span>
         </span>
+
         <div class="user-box">
           <img src="https://via.placeholder.com/35" alt="User">
           <div>
@@ -48,7 +60,7 @@
         </div>
       </div>
     </div>
-    <!-- Top bar end -->
+    <!-- Top bar end/notification -->
 
     <!-- Dashboard Section --> 
     <div id="dashboard" class="section">
@@ -433,8 +445,7 @@
 <!-- send email end -->
 
 
-    <!-- Manage Users Section -->
-<!-- Manage Users Section -->
+   
 <!-- Manage Users Section -->
 <div id="manage-users" class="section" style="display:none;">
   <h3>Manage Users</h3>
@@ -534,8 +545,8 @@ end creat user -->
   </form>
 </div>
 
-
 <!-- update user profile end-->
+
 
     <!-- Settings Section -->
 <div id="settings" class="section" style="display:none;">
