--- a/userpage.html
+++ b/userpage.html
@@ -200,11 +200,11 @@
   <div class="actions-grid">
 
     <!-- Transfer Money -->
-    <div class="action-btn" onclick="showTransferForm()">
+    <div class="action-btn">
       <div class="action-icon"><i class="fas fa-exchange-alt"></i></div>
       <div class="action-title">Transfer Money</div>
       <div class="action-desc">Between accounts or to others</div>
-    </div>
+   </div>
 
     <!-- View Statements -->
     <div class="action-btn" onclick="openTransactionsModal()">
