--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,7 @@
   <script src="admin.js" defer></script>
 </head>
 <body>
-
+      
   <!-- Sidebar list -->
   <div class="sidebar">
     <h2>Admin Panel</h2>
@@ -58,6 +58,8 @@
             <span class="user-status">● Online</span>
           </div>
         </div>
+        <button id="logoutBtn" class="logout-btn">Logout</button>
+
       </div>
     </div>
     <!-- Top bar end/notification -->
