--- a/userpage.html
+++ b/userpage.html
@@ -202,7 +202,7 @@
     <!-- Transfer Money -->
     <div class="action-btn">
       <div class="action-icon"><i class="fas fa-exchange-alt"></i></div>
-      <div class="action-title">Transfer Money</div>
+      <button id="transferBtn" class="action-btn">Transfer</button>
       <div class="action-desc">Between accounts or to others</div>
    </div>
 
