--- a/userpage.html
+++ b/userpage.html
@@ -39,7 +39,8 @@
                     </div>
 
                     <div class="fdic-logo">
-                       <button class="action-btn" style="background:#dc3545;" onclick="logout()">Logout</button>
+                      
+                    <button id="logoutBtn" class="action-btn">Logout</button>
                     </div>
                 </div>
             </div>
@@ -850,4 +851,4 @@
         </div>
         
     </footer>
-    <!-- end of footer section-->
+    end of footer section
